refactor: convert to Cargo workspace with two binary crates
- Convert root Cargo.toml to [workspace] with members = ["cfi", "rot"]
- Move CFI demo into cfi/ subdirectory (src/main.rs, build.rs, link.x, memory.x)
- Create cfi/Cargo.toml for the riscv-cfi-baremetal crate
- Move linker flags from .cargo/config.toml rustflags to per-crate build.rs
  (each crate has its own linker scripts, so flags must be per-crate)
- Remove rot/.cargo/config.toml (workspace shares root .cargo/config.toml)
- Hoist [profile.release] from rot/Cargo.toml to workspace root
- Suppress dead_code warnings on umode_syscalls and UDispatch in rot/
  (retained as Rust API for future U-mode applications)

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,11 +3,8 @@ target = "rv32imac-cfi-none-elf.json"
 
 [target.'cfg(target_arch = "riscv32")']
 runner = "qemu-system-riscv32 -machine virt -nographic -bios none -kernel"
-rustflags = [
-    "-C", "link-arg=-Tmemory.x",
-    "-C", "link-arg=-Tlink.x",
-    "-C", "link-arg=--no-relax",
-]
+# Linker flags (-Tmemory.x, -Tlink.x, --no-relax) are emitted per-crate
+# from each crate's build.rs, since each crate has its own linker scripts.
 
 [unstable]
 build-std = ["core"]
